# Real-time-ASL-Detection-from-Video-Image

./: .gitignore  Dockerfile  README.md  pyproject.toml
backend/: .env.example  requirements.txt
backend/app/: main.py  state.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  predict_image.py  ws_predict.py
backend/app/core/: config.py  dependency.py  exceptions.py  logging.py
backend/app/schemas/: health.py  predict.py
backend/app/services/: mediapipe_hands.py  model_loader.py  predictor.py  preprocessing.py  smoothing.py
backend/app/utils/: image_io.py  timing.py
backend/tests/: test_health.py  test_predict_image.py
backend/weights/: asl_classifier.pt  calibration.json  preprocess.json
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/: LivePredictor.jsx  StatusPill.jsx  UploadPredictor.jsx
frontend/src/services/: api.js  errorLogger.js  ws.js
scripts/: extract_feature.py  prediction.py  train.py
